# RainbowEffects

./: CHANGELOG.md  LICENSE.txt  README.md  RainbowEffects.sln  RainbowGuard.sln  RainbowGuard.slnx  icon.pxo  manifest.json
.github/workflows/: Build mod.yml
RainbowEffects/: RainbowEffects.cs  RainbowEffects.csproj
RainbowGuard/: DXInterop.cs  RainbowEffects.csproj  RainbowGuard.cs  RainbowGuard.csproj
RainbowGuard/RainbowGuardCpp/: CMakeLists.txt  RainbowGuardCpp.cpp  RainbowGuardCpp.h
Resources/: boulderBall  rainbowGuard
UserData/RainbowGuard/: liv.match.dxbc  liv.new.dxbc  main.match.dxbc  main.new.dxbc
py/boulderball/: decompress.py  replace.py
py/common/: common.py  compress.py  convert.py  decompress.py  format.py  winmerge.py
py/guard/ps/: compress.py  decompress.py  replace.py
py/guard/vs/: convert.py  decompress.py  format.py  replace.py
py/ps/: _decompress.py  _format.py  replace.py
py/vs/: _compress.py  _convert.py  _decompress.py  replace.py
